hard-gists/96ec9b3c5df60a07b216/run.log
=== Docker Run Log for 96ec9b3c5df60a07b216 ===
Started at: Mi 29. Okt 18:31:04 CET 2025

[2025-10-29 18:31:04] START: Running container for 96ec9b3c5df60a07b216
[2025-10-29 18:31:04] SUCCESS: Container e53d372795800b761e40b3a00e249a0de176c3d3666580a3120a5e9ea547e180 started for 96ec9b3c5df60a07b216
=== Container logs for 96ec9b3c5df60a07b216 ===
  File "/snippet.py", line 38
    print 'Printing to \'%s\'' % options.file
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 96ec9b3c5df60a07b216 ===
[2025-10-29 18:31:06] INFO: Container e53d372795800b761e40b3a00e249a0de176c3d3666580a3120a5e9ea547e180 has stopped
